--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -47,7 +47,8 @@
 						<a href="{{path('home')}}" class="nav-link"> الرئيسية</a>
 					</li>
 					<li class="nav-item">
-						<a href="{{path('app_login')}}" class="btn btn-outline-success my-2 my-sm-0"> تسجيل الدخول</a>
+						<!--<a href="{{path('app_login')}}" class="btn btn-outline-success my-2 my-sm-0"> تسجيل الدخول</a>-->
+						<a href="{{path('connexion')}}" class="btn btn-outline-success my-2 my-sm-0"> تسجيل الدخول</a>
 					</li>
 					<li class="nav-item">
 						<a href="{{path('inscription')}}" class="btn btn-outline-success my-2 my-sm-0"> الإشتراك</a>
